# social_App

./: .gitignore  README.md  pyproject.toml
account/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_remove_profile_friends.py  0003_friends.py
friend_request/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
friend_request/migrations/: 0001_initial.py  0002_alter_friendrequest_created_at.py  0003_alter_friendrequest_from_user_and_more.py  0004_rename_friend_friends.py  0005_delete_friends.py
post/: admin.py  models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
social_app/: asgi.py  settings.py  urls.py  wsgi.py
